[package]
name = "rtrs"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "0.2.7"
heapless = "0.8.0"
void = { version = "1.0.2", default-features = false }
envint = "0.1.1"

[features]
#default = ["storage_dynamic", "log_meta_dynamic"]
default = ["storage_fixed", "log_meta_fixed"]

critical_section_custom = []
track_locks = []
track_borrows = []

storage_dynamic = []
storage_fixed = []

log_meta_dynamic = []
log_meta_fixed = []
